--- a/public/writeNote.html
+++ b/public/writeNote.html
@@ -51,6 +51,16 @@
                   <textarea class="textarea is-medium" id="noteText"></textarea>
                 </div>
               </div>
+              <div class="field">
+                <div class="select">
+                <select id="label">
+                    <option>Misc</option>
+                    <option>Work</option>
+                    <option>Personal</option>
+                    <option>CS</option>
+                </select>
+                </div>
+             </div>
               <div class="control">
                 <button class="button is-link is-fullwidth has-text-weight-medium is-medium" onclick="handleNoteSubmit()">Create Note</button>
               </div>
