--- a/public/viewNotes.html
+++ b/public/viewNotes.html
@@ -15,7 +15,7 @@
     <script defer src="/__/firebase/8.3.1/firebase-auth.js"></script>
     <script defer src="/__/firebase/8.3.1/firebase-database.js"></script>
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-    <script src="js/viewNotes.js"></script>
+    
   </head>
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -31,7 +31,17 @@
           <div class="column has-text-centered">
             <h1 class="title">Some of Your Greatest Ideas Started Here</h1><br>
           </div>
+          
         </div>
+                <div class="select mb-4">
+                <select id="label">
+                    <option>All</option>
+                    <option>Misc</option>
+                    <option>Work</option>
+                    <option>Personal</option>
+                    <option>CS</option>
+                </select>
+                </div>
         <div id="app" class="columns is-multiline">
           <!-- Note cards will render here -->
         </div>
@@ -47,6 +57,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/viewNotes.js"></script>
   </body>
 
 </html>
